# C-Block-Compiler

./: .gitignore  CMakeLists.txt  README.md
include/c_block/: file.h  log_signal.h  pack_build_parser.h  string.h  token.h
include/c_block/file/: allocator_definition.h  allocator_operations.h  id_definition.h  struct.h  sys_ops.h  utils.h
include/c_block/file/struct/: definition.h  struct_operations.h
include/c_block/string/: pointer.h  ptr_definition.h  ptr_operations.h  struct.h  struct_definition.h  struct_operations.h
include/c_block/token/: automata.h  stream.h  stream_pointer.h  struct.h  struct_definition.h  struct_operations.h
include/c_block/token/stream/: ptr_definition.h  ptr_operations.h  struct_definition.h  struct_operations.h
src/: CMakeLists.txt  c_stream.cpp  c_stream.h  file.h  file_utils.c  file_utils.h  log_signal.h  main.c  main.cpp  pack_build_parser.c  preprocessor.cpp  preprocessor.h  string.h  string_struct.c  string_struct.h  token.cpp  token.h
src/file/: allocator_operations.c  struct_operations.c  utils.c  utils.h
src/file/sys_ops/: unix.c  win32.c
src/parser/: parser.cpp  parser.h  syntax_structure.cpp  syntax_structure.h
src/parser/substructure/: objective_id.cpp  score_holder.cpp  score_source.cpp
src/string/: pointer.h  ptr_operations.c  struct.h  struct_operations.c
src/string/pointer/: definition.h  operations.c  operations.h
src/string/struct/: definition.h  operations.c  operations.h
src/token/: automata.c  automata.h  fms.c  fms.h  stream.h  stream_pointer.h  struct.h  struct_operations.c
src/token/stream/: definition.h  operations.c  operations.h  ptr_operations.c  struct_operations.c
src/token/stream_pointer/: definition.h  operations.c
src/token/struct/: definition.h  operations.c  operations.h
